# Spade-Ace

./: .gitignore  APK_BUILDER_GUIDE.md  CMakeLists.txt  MIGRATION_SUMMARY.md  README.md  README_comprehensive.md  SpadeAce.pro  build-apk.sh  build.gradle  build.sh  check-builder-status.sh  demo_ui.html  gradle.properties  gradlew  pubspec.yaml  settings.gradle
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  build-issue.yml  feature-request.yml
.github/workflows/: README.md  android-ci.yml  apk-builder.yml  build-apk.yml  build-qt.yml  fallback-apk-builder.yml  offline-apk-builder.yml  pr-validation.yml  release-build.yml  release.yml  stable-apk-builder.yml  ultra-stable-apk-builder.yml
android/app/src/main/cpp/: CMakeLists.txt
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/binah/spadeace/: MainActivity.kt
app/src/main/java/com/binah/spadeace/core/: DecryptionEngine.kt  GpuDetector.kt
app/src/main/java/com/binah/spadeace/core/crypto/: AlgorithmRegistry.kt  AsymmetricAlgorithms.kt  EncryptionAlgorithm.kt  SymmetricAlgorithms.kt
app/src/main/java/com/binah/spadeace/data/: Models.kt  ThemePreferences.kt
app/src/main/java/com/binah/spadeace/ui/: Constants.kt  MainViewModel.kt  SpadeAceApp.kt
app/src/main/java/com/binah/spadeace/ui/fragments/: DecryptionFragment.kt  FileOperationsFragment.kt  SettingsFragment.kt  TextDecryptionFragment.kt
app/src/main/java/com/binah/spadeace/ui/screens/: DecryptionScreen.kt  FileOperationsScreen.kt  FileOperationsScreen.kt.bak  SettingsScreen.kt  SettingsScreen.kt.bak  TextDecryptionScreen.kt  TextDecryptionScreen.kt.bak
app/src/main/java/com/binah/spadeace/ui/theme/: Theme.kt  Type.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_security_24.xml  ic_text_fields_24.xml
app/src/main/res/layout/: activity_main.xml  fragment_decryption.xml  fragment_file_operations.xml  fragment_settings.xml  fragment_text_decryption.xml
app/src/main/res/menu/: main_menu.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: colors.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml
flutter_ui/: README.md  UI_PREVIEW.md  analyze_ui.sh  pubspec.yaml
flutter_ui/lib/: main.dart
flutter_ui/lib/models/: app_models.dart
flutter_ui/lib/services/: app_state_provider.dart
flutter_ui/lib/ui/screens/: main_screen.dart
flutter_ui/lib/ui/theme/: pcb_theme.dart
flutter_ui/lib/ui/widgets/: advanced_settings_panel.dart  encryption_config_panel.dart  file_io_panel.dart  log_console_panel.dart  status_display_area.dart
lib/: main.dart  native_bindings.dart  native_bindings_mock.dart
linux/: CMakeLists.txt
native/cpp/: CMakeLists.txt
native/cpp/include/: crypto_engine.h  file_analyzer.h  gpu_engine.h
native/cpp/kernels/: aes_cuda.cu  aes_opencl.cl
native/cpp/src/: attack_methods.cpp  crypto_engine.cpp  ffi_interface.cpp  file_analyzer.cpp  gpu_engine.cpp  performance_manager.cpp
src/: DecryptionWindow.cpp  DecryptionWindow.h  FileOperationsWindow.cpp  FileOperationsWindow.h  MainWindow.cpp  MainWindow.h  SettingsWindow.cpp  SettingsWindow.h  main.cpp
src/core/: CryptoUtils.cpp  CryptoUtils.h  DecryptionEngine.cpp  DecryptionEngine.h
src/data/: Models.cpp  Models.h
test/: widget_test.dart
